<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:id="@+id/fragment_account_form"
    android:layout_height="match_parent"
    android:padding="32dp">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/account_name"
            android:hint="@string/account_name"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatSpinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Base.Widget.AppCompat.Spinner.Underlined"
        android:entries="@array/account_types"
        android:id="@+id/account_type">
    </android.support.v7.widget.AppCompatSpinner>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:id="@+id/account_init_balance"
            android:hint="@string/account_initbalance"/>
    </android.support.design.widget.TextInputLayout>


    <android.support.v7.widget.AppCompatSpinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Base.Widget.AppCompat.Spinner.Underlined"
        android:entries="@array/currencies"
        android:id="@+id/account_currency">
    </android.support.v7.widget.AppCompatSpinner>

    <android.support.v7.widget.ButtonBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="end"
        android:gravity="end">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            style="@style/Base.Widget.AppCompat.Button.Borderless" />
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            style="@style/Base.Widget.AppCompat.Button.Borderless" />
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_save_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saveAndBack"
            style="@style/Base.Widget.AppCompat.Button.Borderless" />

    </android.support.v7.widget.ButtonBarLayout>

</LinearLayout>