<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_account_overview"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

    <FrameLayout
        android:id="@+id/add_quick_fragment"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_margin="0dp"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_scroll"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintVertical_bias="1.0" >

    </FrameLayout>

    <ScrollView
        android:id="@+id/account_scroll"
        android:layout_width="368dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"

        android:layout_marginStart="8dp"
        android:layout_marginTop="-461dp"
        android:paddingBottom="64dp"

        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_quick_fragment"
        app:layout_constraintTop_toTopOf="parent">

        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/account_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </TableLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_account"
        android:src="@drawable/ic_create_white_48dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintBottom_toTopOf="@+id/add_quick_fragment"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
