<resources>
    <string name="app_name">NoDinero</string>
    <string name="save">Save</string>
    <string name="saveAndBack">Save and Back</string>
    <string name="cancel">Cancel</string>

    <!-- Fragment titles -->
    <string name="account_add_title">Add Account</string>
    <string name="account_edit_title">Edit Account</string>
    <string name="account_overview_title">Home</string>
    <string name="expense_add_title">Add Expense</string>
    <string name="expense_edit_title">Edit Expense</string>
    <string name="expense_overview_title">Expense Overview</string>
    <string name="template_add_title">Add Template</string>
    <string name="template_edit_title">Edit Template</string>
    <string name="template_overview_title">Template Overview</string>

    <!-- Menu items -->
    <string name="add_account">Add Account</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_profile">Profile</string>
    <string name="account_overview">Home</string>
    <string name="view_map">Map</string>
    <string name="view_report">Reports</string>

    <!-- Template -->
    <string name="template_delete">Delete</string>
    <string name="template_overview">Templates</string>

    <!-- Add Account Items -->
    <string name="account_name">Name</string>
    <string name="account_type">Type</string>
    <string name="account_initbalance">Initial Balance</string>
    <string name="account_currency">Currency</string>
    <string name="account_delete">Delete</string>
    <string name="accounts">Accounts</string>
    <string-array name="account_types">
        <item>Cash</item>
        <item>Bank</item>
        <item>Credit Card</item>
    </string-array>

    <string-array name="currencies">
        <item>EUR</item>
        <item>USD</item>
    </string-array>

    <string name="add_expense">Add Expense</string>
    <string name="add_template">Add Template</string>

    <!-- Add Expense Items -->
    <string name="expense_name">Name</string>
    <string name="expense_category">Category</string>
    <string name="expense_account">Account</string>
    <string name="expense_value">Value</string>
    <string name="expense_date">Date</string>
    <string name="expense_account_label">Account</string>
    <string name="expense_category_label">Category</string>
    <string name="expense_value_label">Value</string>
    <string name="expense_date_label">Date</string>
    <string name="dummy_date">2000-01-01</string>
    <string name="expense_name_label">Name</string>
    <string name="add">Add</string>
    <string name="back">Back</string>
    <string name="edit">Update</string>
    <string name="add_category">Add Category</string>
    <string name="category_overview">Categories</string>
    <string name="take_picture">Use Camera</string>
    <string name="select_picture">Select a picture</string>
    <string name="category_overview_title">Category Overview</string>
    <string name="add_category_title">Add category</string>

    <string-array name="expense_categories">
        <item>Drink</item>
        <item>Food</item>
        <item>Cloth</item>
    </string-array>

    <string-array name="expense_accounts">
        <item>dummy1</item>
        <item>dummy2</item>
    </string-array>

    <!-- Report Stuff -->
    <string name="report_account">Account Statistics</string>
    <string name="report_category">Category Statistics</string>
    <string name="report_other">Other</string>

    <string-array name="expense_filter_array">
        <item>all</item>
        <item>last 1 month</item>
        <item>last 3 months</item>
        <item>last 6 months</item>
        <item>1 year</item>
    </string-array>

    <!-- HelperS Strings -->
    <string name="no_back_stack">noBackStack</string>
    <string name="simple_date_format">MM-dd-yyyy</string>

    <!-- Profile -->
    <string name="profile_name">Name</string>
    <string name="profile_default_language">Language</string>
    <string name="profile_default_currency">Currency</string>
    <string name="profile_intro">Show Intro</string>
    <string name="profile_password">Password</string>

    <!-- Login Page -->
    <string name="login">Login</string>
    <string name="error_no_login">Login not possible: wrong or no password</string>
    <string name="password_protected">Password Protected</string>
    <string name="profile_saved">User Profile saved</string>

    <string-array name="languages">
        <item>English</item>
        <item>German</item>
    </string-array>

    <string-array name="languages_short">
        <item>en</item>
        <item>de</item>
    </string-array>

    <!-- Intro slider -->
    <string name="TextIntro1">With NoDinero you can track your earnings and spendings as easy as possible!</string>
    <string name="title_activity_welcome2">Create Account</string>

    <string name="TextIntro2">Please create your first account, to start tracking your earnings and spendings.</string>
    <string name="title_activity_welcome">Welcome to NoDinero!</string>

    <string name="TextIntro3">Reoccuring expenses can be easily tracked via templates and their buttons</string>
    <string name="title_activity_welcome3">Quick Add Templates</string>
    <string name="title_activity_welcome4">Categories and Reports</string>
    <string name="TextIntro4">You can assign categories, which makes it even easier to with our reports to keep on top of your money!</string>

</resources>
