<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_category_overview"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <ScrollView
        android:id="@+id/category_scroll"
        android:layout_width="368dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"

        android:layout_marginStart="8dp"
        android:layout_marginTop="-461dp"
        android:paddingBottom="64dp"

        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_quick_fragment"
        app:layout_constraintTop_toTopOf="parent">

        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/category_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </TableLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_category"
        android:src="@drawable/ic_add_white_48dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />



</android.support.constraint.ConstraintLayout>
